# dspy_rag_in_repo_docs_and_impl1

./: .env.sample  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  FILES.csv  FILES.md  Makefile  README.AGENTS.md  README.DSPY.MD  README.md  REPO_COMPLETENESS_CHECKLIST.md  TODO.MD  TODO.md  env.md  mkdocs.yml  pyproject.toml  todo-backlog.yaml
.github/workflows/: ci.yml  hushwheel-quality.yml  pages.yml  publication-pdf.yml  publish.yml  python-ci.yml  quality-gates.yml  rust-wrapper-ci.yml
AGENTS.md.d/: 00-audit-baseline.md  10-verification-loop.md  20-commit-and-push.md  FILES.md  RUST_LOOKUP.md  todo.md
data/questions/: repository.yaml
docs/: test-plan.md
docs/audit/: 2026-03-15-repo-state.md  2026-03-17-docs-and-uv-refresh.md  2026-03-17-full-build.md  2026-03-17-gh-actions-watch-loop.md  2026-03-17-hushwheel-fixture.md  2026-03-17-hushwheel-rag-playbook.md  2026-03-17-notebook-scaffolding.md  2026-03-17-publication-article.md  2026-03-17-repo-completeness-checklist.md  2026-03-18-actions-caching.md  2026-03-18-azure-inference-endpoint-probe.md  2026-03-18-azure-runtime-surfaces.md  2026-03-18-dspy-training-path.md  2026-03-18-hushwheel-program-harness.md  2026-03-18-notebook-execution.md  2026-03-18-notebook-runner-harness.md  2026-03-18-repository-benchmark-broadening.md  2026-03-18-retest-with-env-refresh.md  2026-03-18-retrieval-evaluation-suite.md  2026-03-18-retrieval-ranking-refresh.md  2026-03-18-rust-and-benchmark-hygiene.md  2026-03-18-todo-backlog-sync.md  2026-03-18-z-notebook-runner-harness.md  2026-03-18-zz-file-summary-inventory.md  2026-03-18-zz-research-narrative.md  2026-03-18-zzz-session-consolidation-on-origin-master.md  2026-03-18-zzzz-rust-sqlite-lookup.md  2026-03-18-zzzz-session-consolidation-master-ci-repair.md  2026-03-18-zzzzz-hushwheel-quality-instrumentation.md  2026-03-18-zzzzzz-dspy-pipeline-and-live-azure-proof.md  2026-03-18-zzzzzz-hushwheel-retrieval-record-wording.md  2026-03-18-zzzzzzz-hushwheel-pdf-side-effect-fix.md  2026-03-18-zzzzzzz-hushwheel-quality-salvage.md  2026-03-18-zzzzzzz-land-unlanded-surfaces.md  2026-03-18-zzzzzzz-rebased-master-log-and-azure-typecheck-fix.md  2026-03-18-zzzzzzz-worktree-consolidation.md  2026-03-18-zzzzzzzzzzzz-retrieval-regression-gate.md  2026-03-18-zzzzzzzzzzzzz-land-remaining-unlanded-work.md  2026-03-18-zzzzzzzzzzzzzz-node24-actions-refresh.md  2026-03-18-zzzzzzzzzzzzzz-rebase-hushwheel-quality-over-master.md  (+17 more)
documentation/: azure-deployment.md  hushwheel-fixture-rag-guide.md  mcp-discovery.md  package-api.md  simple-end-to-end-verification-guide.md
documentation/inspired/: dspy-rag-tutorial.md  implementing-rag-with-dspy-technical-guide.md
notebooks/: 01_repo_rag_research.ipynb  02_agent_workflow_checklist.ipynb  03_dspy_training_lab.ipynb  04_sample_population_lab.ipynb  05_hushwheel_fixture_rag_lab.ipynb
publication/: .gitignore  Makefile  README.md  references.bib  repository-rag-lab-article.tex  todo-backlog-table.tex
publication/exploratorium_translation/: .gitignore  Makefile  README.md  exploratorium_translation.tex
rust-cli/: Cargo.toml
rust-cli/src/: main.rs
samples/: README.md
samples/logs/: 20260315T050730Z-gh-runs.md  20260315T085140Z-gh-red-status-check.md  20260316T084754Z-gh-runs.md  20260317T073401Z-gh-runs-notebook-scaffolding.md  20260317T073404Z-gh-runs.md  20260317T080018Z-gh-runs-all-notebooks.md  20260317T083207Z-gh-runs-todo-backlog.md  20260317T084723Z-gh-runs-repo-completeness-checklist.md  20260317T085723Z-gh-runs-hushwheel-fixture.md  20260317T091617Z-gh-runs-hushwheel-rag-playbook.md  (+48 more)
src/repo_rag_lab/: __init__.py  (+28 more)
tests/: test_azure_runtime.py  test_benchmarks_and_notebook_scaffolding.py  test_cli_and_dspy.py  test_docs_site.py  test_dspy_training.py  test_exploratorium_translation.py  test_file_summaries.py  test_github_pr_gates.py  test_hushwheel_fixture.py  test_hushwheel_program_surface.py  test_lookup_first.py  test_mcp_branches.py  test_notebook_runner.py  test_pages_site.py  test_population_samples.py  test_project_surfaces.py  test_repository_rag_bdd.py  test_retrieval.py  test_todo_backlog.py  test_training_samples.py  test_ui_integration.py  test_utilities.py  test_verification.py  test_workflow.py  test_workflow_live.py
tools/: gherkin-lintrc.json  markdownlint-cli2.yaml  taplo.toml
utilities/: README.md
(+60 files in other folders)
