[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-rag-lab"
version = "0.1.0"
description = "Research scaffold for DSPy RAG over repository content with MCP discovery and Azure deployment artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dspy-ai>=2.5.0",
  "jupyterlab>=4.3.0",
  "nbformat>=5.10.4",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
azure = [
  "azure-ai-inference>=1.0.0b9",
  "azure-core>=1.32.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
