[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[project]
name = "repo-rag-lab"
version = "0.1.0"
description = "Research scaffold for DSPy RAG over repository content with MCP discovery and Azure deployment artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dspy-ai>=2.5.0",
  "jupyterlab>=4.3.0",
  "nbformat>=5.10.4",
  "pyyaml>=6.0.2",
]

[project.scripts]
repo-rag = "repo_rag_lab.cli:main"

[project.optional-dependencies]
azure = [
  "azure-ai-inference>=1.0.0b9",
  "azure-core>=1.32.0",
]

[dependency-groups]
dev = [
  "coverage[toml]>=7.10.0",
  "mypy>=1.18.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.2.0",
  "radon>=6.0.1",
  "ruff>=0.15.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=src/repo_rag_lab --cov-report=term-missing --cov-report=xml --cov-fail-under=85"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/repo_rag_lab"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_redundant_casts = true
warn_unused_configs = true
