[build-system]
build-backend = "uv_build"
requires      = ["uv_build>=0.10.10,<0.11.0"]

[project]
dependencies = [
  "dspy-ai>=2.5.0",
  "jupyterlab>=4.3.0",
  "nbformat>=5.10.4",
  "pyyaml>=6.0.2",
]
description = "Research scaffold for DSPy RAG over repository content with MCP discovery and Azure deployment artifacts."
name = "repo-rag-lab"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.scripts]
repo-rag = "repo_rag_lab.cli:main"

[project.optional-dependencies]
azure = [
  "azure-ai-inference>=1.0.0b9",
  "azure-core>=1.32.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.0",
  "coverage[toml]>=7.10.0",
  "mypy>=1.18.0",
  "nbqa>=1.9.1",
  "pre-commit>=4.3.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.2.0",
  "radon>=6.0.1",
  "ruff>=0.15.0",
  "yamllint>=1.37.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts    = "--doctest-modules --cov=src/repo_rag_lab --cov-report=term-missing --cov-report=xml"
pythonpath = ["src"]
testpaths  = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/repo_rag_lab"]

[tool.coverage.report]
fail_under   = 85
show_missing = true
skip_covered = false

[tool.ruff]
line-length    = 100
src            = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "B", "C4", "E", "F", "FA", "I", "N", "PIE", "PT", "RET", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN201"]

[tool.mypy]
check_untyped_defs       = true
disable_error_code       = ["import-untyped"]
disallow_any_generics    = true
disallow_incomplete_defs = true
disallow_untyped_defs    = true
no_implicit_optional     = true
python_version           = "3.11"
strict_equality          = true
warn_redundant_casts     = true
warn_unused_configs      = true
warn_unused_ignores      = true

[tool.basedpyright]
include                   = ["src", "tests"]
reportAny                 = false
reportMissingTypeStubs    = false
reportUnknownArgumentType = false
reportUnknownMemberType   = false
reportUnknownVariableType = false
typeCheckingMode          = "strict"
